# universal-remote

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: release.yml
openspec/changes/add-androidtv-adapter/: tasks.md
openspec/changes/add-androidtv-adb-text/: design.md  proposal.md  tasks.md
openspec/changes/add-appletv-adapter/: design.md  proposal.md  tasks.md
openspec/changes/add-custom-button-actions/: design.md  proposal.md  tasks.md
openspec/changes/add-custom-keyboard-shortcuts/: design.md  proposal.md  tasks.md
openspec/changes/add-custom-remote-buttons/: design.md  proposal.md  tasks.md
openspec/changes/add-device-discovery/: proposal.md  tasks.md
openspec/changes/add-device-reachability-indicators/: design.md  tasks.md
openspec/changes/add-edit-device-delete-button/: design.md  tasks.md
openspec/changes/add-firetv-adapter/: README.md  design.md  proposal.md  tasks.md
openspec/changes/add-global-error-handling/: design.md  proposal.md  tasks.md
openspec/changes/add-homebrew-distribution/: proposal.md  tasks.md
openspec/changes/add-lg-webos-adapter/: design.md  tasks.md
openspec/changes/add-list-numbers-vim-nav/: tasks.md
openspec/changes/add-menu-quote/: design.md  proposal.md  tasks.md
openspec/changes/add-remote-buttons/: design.md  proposal.md  tasks.md
openspec/changes/add-roku-adapter/: README.md  design.md  proposal.md  tasks.md
openspec/changes/add-settings-page/: tasks.md
openspec/changes/add-ur-command-alias/: proposal.md
openspec/changes/codify-command-palette/: design.md  tasks.md
openspec/changes/confirm-device-delete/: design.md  proposal.md  tasks.md
openspec/changes/connecting-loading-spinner/: design.md  tasks.md
openspec/changes/devices-screen-add-row/: design.md  proposal.md  tasks.md
openspec/changes/pairing-modal-overlay/: design.md  tasks.md
openspec/changes/refine-add-device-screen/: design.md
openspec/changes/reject-duplicate-device/: proposal.md  tasks.md
openspec/changes/reject-lone-modifier-shortcuts/: design.md  proposal.md  tasks.md
openspec/changes/remove-power-probe-device-fields/: design.md  proposal.md  tasks.md
openspec/changes/remove-single-adapter-branch/: tasks.md
packaging/: build_binary.sh  entry.py
src/universal_remote/: __init__.py  adapter.py  capabilities.py  cli.py  discovery.py  error_log.py  errors.py  keys.py  reachability.py  registry.py  session.py
tests/: conftest.py  fakes.py  test_action_catalog.py  test_adb_text.py  test_androidtv_adapter.py  test_appletv_adapter.py  test_capabilities.py  test_cli_integration.py  test_custom_button_actions.py  test_custom_buttons.py  test_device_crud.py  test_device_model.py  test_discovery.py  test_error_log.py  test_firetv_adapter.py  test_keys.py  test_lg_adapter.py  test_pairing.py  test_preferences_store.py  test_probe.py  test_reachability.py  test_registry.py  test_roku_adapter.py  test_run_script_modal.py  test_samsung_adapter.py  test_script_results.py  test_script_runner.py  test_session.py  test_shortcuts_catalog.py  test_store.py  test_tui_adb_text.py  test_tui_capabilities.py  test_tui_command_palette.py  test_tui_connecting.py  test_tui_custom_button_config.py  test_tui_devices.py  test_tui_discover.py  test_tui_error_net.py  test_tui_go_back.py  test_tui_menu.py  (+6 more)
(+185 files in other folders)
