[project]
name = "universal-remote"
version = "0.1.0"
description = "A local, terminal-based universal TV remote."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "textual>=0.80",
    "samsungtvws[async]",
    "wakeonlan>=3.0",
]

[project.scripts]
universal-remote = "universal_remote.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/universal_remote"]

[tool.pytest.ini_options]
testpaths = ["tests"]
