[project]
name = "universal-remote"
version = "0.1.0"
description = "A local, terminal-based universal TV remote."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "textual>=0.80",
    "aiohttp>=3.9",
    "samsungtvws[async]",
    "aiowebostv>=0.7",
    "pyatv>=0.18.0",
    "rokuecp>=0.19",
    "adb-shell[async]>=0.4.4",
]

[project.scripts]
universal-remote = "universal_remote.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.6",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/universal_remote"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Run across all cores; the suite is TUI-heavy and tests are process-isolated.
# Override with `-n0` for a serial run (debugging, pdb).
addopts = "-n auto"
