[project]
name = "universal-remote"
version = "1.1.1"
description = "A local, terminal-based universal TV remote."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Adam Smith" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "textual>=0.80",
    "aiohttp>=3.9",
    "samsungtvws[async]",
    "aiowebostv>=0.7",
    "pyatv>=0.18.0",
    "rokuecp>=0.19",
    "adb-shell[async]>=0.4.4",
    "androidtvremote2>=0.3.1",
    "zeroconf>=0.130",
    "async-upnp-client>=0.40",
]

[project.scripts]
universal-remote = "universal_remote.cli:main"
# Short alias so `ur` works everywhere the console script is installed.
ur = "universal_remote.cli:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=8.0",
    "pytest-xdist>=3.6",
    "python-semantic-release>=10.6.1",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/universal_remote"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Run across all cores; the suite is TUI-heavy and tests are process-isolated.
# Override with `-n0` for a serial run (debugging, pdb).
addopts = "-n auto"

[tool.semantic_release]
# Stamp the derived version back into pyproject; the frozen binary reads it via
# importlib.metadata at build time, so the build job must checkout the bumped tag.
version_toml = ["pyproject.toml:project.version"]
# Stay in the 0.x range instead of forcing 1.0.0 on the first release.
allow_zero_version = true
# [skip ci] stops the bump commit PSR pushes back to main from re-triggering.
commit_message = "{version} [skip ci]\n\nAutomatically generated by python-semantic-release"

[tool.semantic_release.branches.main]
match = "main"
